<resources>
    <string name="app_name">毕业设计</string>
    <string name="header_hint_refresh_normal">下拉可以刷新</string>
    <string name="header_hint_refresh_ready">松开立即刷新</string>
    <string name="header_hint_refresh_loading">刷新中</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">上滑查看更多</string>
    <string name="footer_hint_load_ready">松开立即加载</string>
    <string name="last_update_time">最后更新 </string>
    <string name="common_loading">努力加载中……</string>
    <string name="order_complete">订单已全部显示</string>
    <string name="network_error_hint">网络连接失败\n点击屏幕，重新加载</string>
    <string name="tab_title">供暖节点</string>
    <string name="scan">概览</string>
    <string name="video">视频</string>
    <string name="control">控制</string>
    <string name="details">详情</string>
    <string name="node_choice">节点选择</string>
    <string name="last_scan">上次查询:</string>
    <string name="scan_node">朝阳区节点2</string>
    <string name="nick_name">世界和平</string>
    <string name="change_nick_hint">昵称不可包含*号</string>
    <string name="input_user_nick">请输入昵称</string>
    <!--MineFragment-->
    <string name="mine">我的</string>
    <string name="mine_device">我的设备</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_note">我的记录</string>
    <string name="mine_contracts">我的联系</string>
    <string name="mine_info">我的账户</string>
    <string name="mine_system_setting">系统设置</string>
    <string name="mine_night_mode">夜间模式</string>
    <string name="phone_account">手机号码</string>
    <string name="scroll_to_scale">拖动查询历史数据</string>
    <string name="watch_detail">查看细节</string>
    <string name="save_image">保存图像</string>
    <string name="refresh_data">刷新数据</string>
    <string name="loading_text">努力加载中……</string>
    <string name="label_average_temp">平均值：</string>
    <string name="label_max_temp">最大值：</string>
    <string name="label_min_temp">最小值：</string>
    <string name="user_name_hint">用户名</string>
    <string name="user_pwd_hint">密码</string>
    <string name="login_log_btn_text">登录</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_reg_btn_text">注册</string>
    <string name="add_function">添加功能</string>
    <string name="empty_content">暂无数据</string>
    <!--日历选择相关-->
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="back_today">回到今天</string>
    <string name="user_head">头像</string>
    <string name="activity_system_settings_logout">退出登录</string>
    <string name="mine_account">我的账户</string>
    <string name="cancel">取消</string>
    <string name="pic_take_photo">拍照</string>
    <string name="pic_from_album">从手机相册选择</string>
    <string name="cut_pic">裁剪图片</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="rate_label">转速 n/s</string>
    <string name="temp_label">温度 ℃</string>
    <string name="loading_more">上拉加载更多...</string>
    <string name="complete">完成</string>
    <string name="fail">错误</string>
    <string name="upload">上传</string>
    <string name="revert_status">复位上传状态</string>
    <string name="info_details">详情信息</string>
    <string name="collect_temp_out">出水温度：</string>
    <string name="collect_temp_in">进水温度：</string>
    <string name="collect_water_press">管道水压：</string>
    <string name="collect_time">采集时间：</string>
    <string name="temp_control">水温控制</string>
    <string name="press_control">水压控制</string>
    <string name="press_label_control">水压:</string>
    <string name="press_unit">100kPa</string>
    <string name="temp_unit">100℃</string>
    <string name="temp_label_control">水温:</string>
</resources>
