<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cut_off_line" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/scan"
            style="@style/tab_style"
            android:checked="true"
            android:drawableTop="@drawable/tab_scan_selector"
            android:text="@string/scan" />

        <RadioButton
            android:id="@+id/video"
            style="@style/tab_style"
            android:drawableTop="@drawable/tab_video_selector"
            android:text="@string/video" />

        <RadioButton
            android:id="@+id/control"
            style="@style/tab_style"
            android:drawableTop="@drawable/tab_control_selector"
            android:text="@string/control" />

        <RadioButton
            android:id="@+id/details"
            style="@style/tab_style"
            android:drawableTop="@drawable/tab_details_selector"
            android:text="@string/details" />

        <RadioButton
            android:id="@+id/mine"
            style="@style/tab_style"
            android:drawableTop="@drawable/tab_mine_selector"
            android:text="@string/mine" />
    </RadioGroup>
</LinearLayout>
