<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lebron.graduationpro1.controlpage.view.ControlFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="@color/toolBarBackground"
        android:minHeight="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/control"
            android:textColor="@color/text_color_white"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/temp_control"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayout_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/textView_label_water_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_label_control" />

            <SeekBar
                android:id="@+id/seekBar_water_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:max="100"
                android:progress="60"
                android:progressDrawable="@drawable/progress_holo_light"
                android:thumb="@mipmap/seek_bar_icon" />

            <TextView
                android:id="@+id/textView_water_temp_MAX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_unit" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/water_decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:background="@drawable/inc_dec_selector"
                android:src="@mipmap/decrease"
                tools:ignore="contentDescription" />

            <ImageView
                android:id="@+id/water_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:background="@drawable/inc_dec_selector"
                android:src="@mipmap/increase"
                tools:ignore="contentDescription" />
        </RelativeLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/temp_upload"
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cpb_cornerRadius="48dp"
            app:cpb_textComplete="@string/complete"
            app:cpb_textError="@string/fail"
            app:cpb_textIdle="@string/upload" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="30dp"
            android:background="@color/tabSelected" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/press_control"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearLayout_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/textView_label_water_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/press_label_control" />

            <SeekBar
                android:id="@+id/seekBar_water_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/progress_holo_light"
                android:thumb="@mipmap/seek_bar_icon" />

            <TextView
                android:id="@+id/textView_water_rate_MAX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/press_unit" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/rate_decrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:background="@drawable/inc_dec_selector"
                android:src="@mipmap/decrease"
                tools:ignore="contentDescription" />

            <ImageView
                android:id="@+id/rate_increase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:background="@drawable/inc_dec_selector"
                android:src="@mipmap/increase"
                tools:ignore="contentDescription" />
        </RelativeLayout>

        <com.dd.CircularProgressButton
            android:id="@+id/rate_upload"
            android:layout_width="160dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cpb_cornerRadius="48dp"
            app:cpb_textComplete="@string/complete"
            app:cpb_textError="@string/fail"
            app:cpb_textIdle="@string/upload" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="30dp"
            android:background="@color/tabSelected" />
    </LinearLayout>

</LinearLayout>
